implementation of user deletion
