# server/src/modules/users/service.js
@@ -1,3 +1,4 @@
+const { AppError } = require("../../shared/errors");
 const { validateUser } = require("./validation");
 const { span } = require("../../observability/tracing");
 
@@ -6,6 +7,12 @@ function createService(repository) {
     listUsers: (query) => span("users.list", () => repository.listUsers(query)),
     createUser: (body) =>
       span("users.create", () => repository.createUser(validateUser(body))),
+    deleteUser: (id) =>
+      span("users.delete", async () => {
+        const deleted = await repository.deleteUser(id);
+        if (deleted === null) throw new AppError("User not found", 404);
+        return { id: deleted };
+      }),
   };
 }
 
